# plot-example

./: .gitignore  CMakePresets.json  README.md  qcustomplot.cpp  qcustomplot.h  split.py
examples/plots/: CMakeLists.txt  CMakePresets.json  mainwindow.cpp
qt6_fbo_demo/: CMakeLists.txt  main.cpp
qt_fbo_demo/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp
src/: colorgradient.cpp  colorgradient.h  core.cpp  core.h  datacontainer.h  global.h  item.cpp  item.h  layer.cpp  layer.h  layout.cpp  layout.h  lineending.cpp  lineending.h  paintbuffer.cpp  paintbuffer.h  painter.cpp  painter.h  plottable.cpp  plottable.h  plottable1d.h  scatterstyle.cpp  scatterstyle.h  selection.cpp  selection.h  selectiondecorator-bracket.cpp  selectiondecorator-bracket.h  selectionrect.cpp  selectionrect.h  vector2d.cpp  vector2d.h
src/axis/: axis.cpp  axis.h  axisticker.cpp  axisticker.h  axistickerdatetime.cpp  axistickerdatetime.h  axistickerfixed.cpp  axistickerfixed.h  axistickerlog.cpp  axistickerlog.h  axistickerpi.cpp  axistickerpi.h  axistickertext.cpp  axistickertext.h  axistickertime.cpp  axistickertime.h  labelpainter.cpp  labelpainter.h  range.cpp  range.h
src/items/: item-bracket.cpp  item-bracket.h  item-curve.cpp  item-curve.h  item-ellipse.cpp  item-ellipse.h  item-line.cpp  item-line.h  item-pixmap.cpp  item-pixmap.h  item-rect.cpp  item-rect.h  item-straightline.cpp  item-straightline.h  item-text.cpp  item-text.h  item-tracer.cpp  item-tracer.h
src/layoutelements/: layoutelement-axisrect.cpp  layoutelement-axisrect.h  layoutelement-colorscale.cpp  (+5 more)
(+22 files in other folders)
